refactor: use formatted Strings