@@ -70,8 +70,7 @@ public final class IndexedCsvReader<T> implements Closeable {
         throws IOException {
 
         Preconditions.checkArgument(!Util.containsDupe(fieldSeparator, quoteCharacter, commentCharacter),
-            "Control characters must differ"
-                + " (fieldSeparator=%s, quoteCharacter=%s, commentCharacter=%s)",
+            "Control characters must differ (fieldSeparator=%s, quoteCharacter=%s, commentCharacter=%s)",
             fieldSeparator, quoteCharacter, commentCharacter);
 
         this.file = file;
@@ -232,8 +231,7 @@ public final class IndexedCsvReader<T> implements Closeable {
     private String buildExceptionMessage() {
         return (csvParser.getStartingLineNumber() == 1)
             ? "Exception when reading first record"
-            : String.format("Exception when reading record that started in line %d",
-            csvParser.getStartingLineNumber());
+            : "Exception when reading record that started in line %d".formatted(csvParser.getStartingLineNumber());
     }
 
     @Override
